<resources>
    <string name="app_name">imagedb</string>
    <string name="string_my_profile">Mój profil</string>
    <string name="string_log_out">Wyloguj</string>
    <string name="string_cart">Koszyk</string>
    <string name="string_quantity">Ilość</string>
    <string name="string_book_title">Tytuł książki</string>
    <string name="string_login">Logowanie</string>
    <string name="string_register">Rejestracja</string>
    <string name="string_email">Email</string>
    <string name="string_password">Hasło</string>
    <string name="string_login_btn">Zaloguj</string>
    <string name="string_register_btn">Zarejestruj</string>
    <string name="string_back_to_login">Powrót do logowania</string>
    <string name="string_price">Cena</string>
    <string name="string_description">Opis</string>
    <string name="string_currently">Ilość w koszyku</string>
    <string name="string_size">Rozmiar: </string>
    <string name="string_product_price">Cena: </string>
    <string name="string_add_to_cart">Do koszyka</string>
    <string name="string_name">Imię</string>
    <string name="string_surname">Nazwisko</string>
    <string name="string_phone">Telefon</string>
    <string name="string_address">Adres</string>
    <string name="string_save">Zapisz</string>
    <string name="string_change_pass">Zmień hasło</string>
    <string name="string_cancle">Anuluj</string>
    <string name="string_old_password">Stare hasło</string>
    <string name="string_new_password">Nowe hasło</string>
    <string name="string_confirm_new_password">Powtórz nowe hasło</string>
    <string name="string_search">Szukaj</string>
    <string name="string_subtotal">Do zapłaty: </string>
    <string name="string_next">Dalej</string>
    <string name="string_type_sending">Rodzaj przesyłki: </string>
    <string name="string_type_payment">Rodzaj płatności: </string>
    <string name="string_order">Zamówienie</string>
    <string name="string_order_finish">Zamów</string>
    <string name="string_settings">Ustawienia</string>
    <string name="string_help">Pomoc</string>
    <string name="string_about_us">O nas</string>
    <string name="string_ask">Często zadawane pytania/ opinie</string>
    <string name="string_contakt">Kontakt do nas</string>
    <string name="string_map">Gdzie jesteśmy? </string>
    <string name="string_send_ask">Wyślij pytanie/ opinie</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_point_post">Punkty odbioru przesyłki</string>
    <string name="string_point_post">Odbiór przesyłki</string>

    <!--<string name="title_activity_maps">Map</string>-->


</resources>
