<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <TextView
        style="@style/changePassStyle"
        android:text="@string/string_old_password"
        android:id="@+id/textOldPass"
        android:layout_marginTop="@dimen/marginPass"/>

    <EditText
        style="@style/passStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextOldPass" />

    <TextView
        style="@style/changePassStyle"
        android:text="@string/string_new_password"
        android:id="@+id/textNewPass"
        android:layout_marginLeft="@dimen/marginPass"
        android:layout_marginRight="@dimen/marginPass"/>

    <EditText
        style="@style/passStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextNewPass" />


    <TextView
        style="@style/changePassStyle"
        android:text="@string/string_confirm_new_password"
        android:id="@+id/textConfNewPass" />

    <EditText
        style="@style/passStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextConfNewPass" />

    <Button

        android:text="@string/string_save"
        android:id="@+id/btnSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/marginPass"
        android:layout_marginRight="@dimen/marginPass"/>
    <Button
        android:text="@string/string_cancle"
        android:id="@+id/btnClose"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/marginPass"
        android:layout_marginRight="@dimen/marginPass"/>
</LinearLayout>