<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linear"
    android:background="@color/white"
    tools:context=".LoginActivity">



    <TextView
        style="@style/loginPage"
        android:text="@string/string_login"
        android:layout_width="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/emailStyle"/>


    <EditText
        android:id="@+id/etPass"
        style="@style/passwordStyle"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="152dp">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btnLogin"
            android:text="@string/string_login_btn"
            android:onClick="login"
            android:elevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/btnReg"
            android:layout_alignStart="@+id/btnReg" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btnReg"
            android:text="@string/string_register_btn"
            android:onClick="register"
            android:elevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


</LinearLayout>